# T0

./: .gitignore  CHANGES  CLAUDE.md  Jenkinsfile  MANIFEST.in  README.md  memo  pyproject.toml  requirements.txt  setup.py  setup_build.py  setup_dependencies.py  setup_t0.py  setup_template.py  test.py  test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: create_tag.yaml  create_tag_and_release.yaml  deployReplay.yaml  deployReplayPR.yaml  pypiReleaseUpload.yml  pypi_build_publish_template.yaml  pypi_upload.yml  test_pipeline.yaml  trigger.yaml  validate-config.yaml
doc/sphinx/: changelog.rst  code.rst  conf.py  index.rst  introduction.rst  references.rst
docs/superpowers/: t0-architecture-guide.html
docs/superpowers/plans/: 2026-05-07-t0-architecture-guide.md  (+1 more)
etc/: ContainterConfig.sh  HIProdOfflineConfiguration.py  HIReplayOfflineConfiguration.py  OXYProdOfflineConfiguration.py  OXYReplayOfflineConfiguration.py  ProdOfflineConfiguration.py  ProdOfflineConfigurationInDevelopment.py  ReplayOfflineConfiguration.py  ReplayOfflineConfigurationRun1.py  SLSAlarmsConfig.py  Tier0Config.py  XeXeProdOfflineConfiguration.py  XeXeReplayOfflineConfiguration.py  build_pypi_packages.sh  build_testpypi_packages.sh  test.py
etc/configurations/: DQM.json  PromptReco.json  ReplayConfiguration.json  Scenarios.json
etc/operations/: SLSAlarmsConfig.py
operations/: cmst0-backlog-wma.py
src/python/T0/: __init__.py
standards/: .pylintrc
test/python/: validate_config.py
tools/: build_pypi_packages.sh
(+292 files in other folders)
