[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "T0"
version = "0.0.0"
description = "This package contains the code that is involved in the Tier 0 agent when its deployed"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["T0"]
authors = [
  {email = "Dirk.Hufnagel@cern.ch"},
  {name = "Dirk Hufnagel"}
]
maintainers = [
  {name = "WMCore", email = "ms.unmerged@cern.ch"}
]

classifiers  = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Topic :: Database"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src/python"]

[project.urls]
homepage = "https://github.com/dmwm/T0"
 

